@@ -1,7 +1,6 @@
 package com.loktar.learn.jdk9;
 
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 public class StreamApi {
@@ -9,24 +8,24 @@ public class StreamApi {
         // takeWhile() 方法示例
         List<Integer> numbers = Stream.of(1, 2, 3, 4, 5, 6)
                 .takeWhile(n -> n < 4)
-                .collect(Collectors.toList());
+                .toList();
         System.out.println("takeWhile 示例：" + numbers);
 
         // dropWhile() 方法示例
         List<Integer> numbers2 = Stream.of(1, 2, 3, 4, 5, 6)
                 .dropWhile(n -> n < 4)
-                .collect(Collectors.toList());
+                .toList();
         System.out.println("dropWhile 示例：" + numbers2);
 
         // ofNullable() 方法示例
         String name = null;
         List<String> names = Stream.ofNullable(name)
-                .collect(Collectors.toList());
+                .toList();
         System.out.println("ofNullable 示例：" + names);
 
         // iterate() 方法的重载示例
         List<Integer> evenNumbers = Stream.iterate(0, n -> n < 10, n -> n + 2)
-                .collect(Collectors.toList());
+                .toList();
         System.out.println("iterate 重载示例：" + evenNumbers);
 
         // 可能不会按顺序打印
